added campaign's logic, added kategoriseeder and few updates to campaign tabel in db
